2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/51_ThisDansMain.deca
// Description:
//    Programme : utilisation de this dans main
// Resultats:
//      Programme correcte syntaxiquement incorrecte contextuellemnt 
//
// Historique:
//    cree le 20/01/2024
{
    int x,y;
    y = this + x;
}