2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/22_FauxAdd.deca
// Description:
//    tests de programme incorrect syntaxiquement , addition incorrecte car pas d'opérande gauche
//
// Resultats:
//    ligne 11 : Erreur, mismatched input ';'
//
// Historique:
//    cree le 09/01/2024
{
    int x =0;
    x = 1+;
}